--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "aws-cdk": "2.104.0",
+    "jest": "^29.7.0",
+    "serverless-newrelic-lambda-layers": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
